# prompt-gen-desktop

./: .env.development  .env.example  .gitignore  ACTUAL_FIXES_APPLIED.md  ALL_ISSUES_FIXED_SUMMARY.md  BUILD_VALIDATION_SUMMARY.md  CHANGELOG.md  CI_CD_COMPLETE.md  CI_CD_SETUP.md  CI_WORKFLOW_CHANGES.md  COMPLETE_FIX_APPLIED.md  COMPLETION_REPORT.md  DEBUG_WHATS_BROKEN.md  DESKTOP_FIX_COMPLETE_SUMMARY.md  EDITPAGE_CREATED_COMPLETE.md  EDITPAGE_HEADER_COMPRESSION_FIX.md  FINDING_SEPARATOR_SET_TERTIARY_OPERATOR.md  FIX_REMAINING_PACKAGE_ID.md  GITHUB_BADGES.md  GITHUB_WORKFLOWS_CHECK.md  GITHUB_WORKFLOWS_VERIFIED.md  HOMEPAGE_NAVIGATION_FIX.md  KEYBOARD_SHORTCUTS.md  LIBRARY_LOAD_FIX.md  LIBRARY_STATUS.md  LINTING_FIXES_COMPLETE.md  M12_NAVIGATION_ALIGNMENT_SUMMARY.md  MARKETPLACE_FINAL_SUMMARY.md  MARKETPLACE_INTEGRATION.md  MARKETPLACE_INTEGRATION_STATUS.md  MARKETPLACE_STATUS_URL_FIX.md  MARKETPLACE_UI_CONSOLIDATION.md  MIGRATION_INSTRUCTIONS.md  NAVIGATION_ALIGNMENT_COMPLETE.md  NAVIGATION_QUICK_REFERENCE.md  NAVIGATION_RESTRUCTURE_COMPLETE.md  NAVIGATION_TESTING_CHECKLIST.md  NAVIGATION_UX_ENHANCEMENTS_COMPLETE.md  NAVIGATION_VISUAL_GUIDE.md  NAVIGATION_WEB_APP_STYLE_COMPLETE.md  (+41 more)
docs/: index.md
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cli.rs  lib.rs  main.rs
src-tauri/src/commands/: debug.rs  http.rs  library.rs  mod.rs  oauth.rs  oauth_probe.rs  package.rs  render.rs  validation.rs
src-tauri/src/context/: context.rs  mod.rs  storage.rs  value.rs
src-tauri/src/core/: mod.rs  models.rs  rulebook.rs  version.rs
src-tauri/src/parser/: dependency_resolver.rs  mod.rs  package_loader.rs
src-tauri/src/renderer/: engine.rs  mod.rs  renderer.rs  seeded_random.rs  selector.rs  separator.rs  tag_expression.rs  template_parser.rs
src-tauri/src/rules/: mod.rs  processor.rs
src-tauri/src/storage/: library_entry.rs  mod.rs  package_library.rs
src-tauri/src/validator/: integration_tests.rs  mod.rs
test-packages-for-comparison/: article-test.yaml  base-package.yaml  broken_package.yaml  circular-dep-test.yaml  complex-tags-test.yaml  cross-ref-test.yaml  (+12 more)
(+196 files in other folders)
