[package]
name = "rpg-desktop"
version = "0.1.0"
description = "Random Prompt Generator - Reference Implementation"
authors = ["RPG Spec Team"]
edition = "2021"
default-run = "rpg-desktop"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tauri = { version = ">=2.0.0, <3.0.0", features = [] }
tauri-plugin-dialog = { version = ">=2.0.0, <3.0.0" }
tauri-plugin-fs = { version = ">=2.0.0, <3.0.0" }
tauri-plugin-shell = { version = ">=2.0.0, <3.0.0" }
tauri-plugin-deep-link = { version = ">=2.0.0, <3.0.0" }
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
tiny_http = "0.12"
reqwest = { version = "0.12", default-features = true, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
rand = "0.8"
base64 = "0.21"
sha2 = "0.10"

[build-dependencies]
tauri-build = { version = ">=2.0.0, <3.0.0", features = [] }

# Library for shared code and tests
[lib]
name = "rpg_lib"
path = "src/lib.rs"

# Desktop app binary
[[bin]]
name = "rpg-desktop"
path = "src/main.rs"

# CLI tool binary
[[bin]]
name = "rpg-cli"
path = "src/cli.rs"

[dev-dependencies]
tempfile = "3.24.0"
